sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value pluspetit
  if(!pluspetit(0,1)){
      ^